[package]
name = "primes-cli"
version = "1.0.0"
authors = ["Sean Macdonald <sean@crazyhorsecoding.com>"]
edition = "2021"
description = "A command-line utility for finding prime numbers"

[[bin]]
name = "primes"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[profile.release]
debug = true