[package]
name = "codemonk-primes-cli"
version = "1.0.4"
authors = ["Sean Macdonald <sean@crazyhorsecoding.com>"]
edition = "2021"
description = "A command-line utility for finding prime numbers"
repository = "https://github.com/sean9999/primes-cli/"
license = "MIT OR Apache-2.0"
keywords = ["prime", "numbers", "sieve", "eratosthenes", "cli"]
homepage = "https://www.seanmacdonald.ca/posts/primes"
documentation = "https://github.com/sean9999/primes-cli/wiki"
readme = "README.md"
categories = ["command-line-utilities", "mathematics"]

[[bin]]
name = "primes"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
