cargo-features = ["edition2024"]

[package]
name = "codemonk-primes-cli"
version = "1.0.4"
authors = ["Sean Macdonald <sean@crazyhorsecoding.com>"]
edition = "2024"
description = "A command-line utility for finding prime numbers"
repository = "https://github.com/sean9999/primes-cli/"
license = "MIT OR Apache-2.0"
keywords = ["prime", "numbers", "sieve", "eratosthenes", "cli"]
homepage = "https://www.seanmacdonald.ca/posts/primes"
documentation = "https://crates.io/crates/codemonk-primes-cli"
readme = "README.md"
categories = ["command-line-utilities", "mathematics"]

[lib]
name = "primes"
#crate-type = ["cdylib", "rlib"]

[[bin]]
name = "primes"
path = "src/main.rs"

[dependencies]
bencher = "0.1.5"
clap = { version = "4.4.18", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "example"
harness = false

[toolchain]
channel = "nightly"
